--- a/BarisTutakli.Week4.IdentityAuthApi/BarisTutakli.Week4.IdentityAuthApi.csproj
+++ b/BarisTutakli.Week4.IdentityAuthApi/BarisTutakli.Week4.IdentityAuthApi.csproj
@@ -5,11 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.13" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="Application\Commands\" />
+    <Folder Include="Application\Handlers\" />
+    <Folder Include="Application\Queries\" />
   </ItemGroup>
 
 </Project>
